now compiles only to sbt 1.0.0