@@ -12,6 +12,4 @@ bintrayRepository := "sbt-plugin-releases"
 bintrayPackage := name.value
 bintrayReleaseOnPublish := false
 
-crossSbtVersions := Seq("0.13", "1.0.0")
-
-//scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m", s"-Dproject.version=${version.value}")
+//crossSbtVersions := Seq("0.13.16", "1.0.0")
